Fix helpbox padding, make sure all elements (hopefully) are visible.

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h2 {
 }
 
 textarea {
-    height: 400px;
+    height: 350px;
     width: 100%;
     border: 1px solid #ccc;
     overflow: auto;
@@ -115,7 +115,7 @@ button {
 	padding: 5px 10px;
 	text-decoration: none;
     font-family: "Source Sans Pro", "Open Sans", sans-serif;
-    font-size: 10pt;
+    font-size: 9pt;
 }
     
 button:hover {
@@ -175,16 +175,19 @@ button:active {
  /* IE 10+ */background: linear-gradient(to bottom, rgba(229,239,255,1) 0%, rgba(255,241,229,1) 100%);
 /* W3C */filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5efff', endColorstr='#fff1e5', GradientType=0 );
 /* IE6-9 */
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     height: 100%;
-    padding: 3em;
+    width: 100%;
     font-family: "Source Sans Pro", "Open Sans", "Arial", sans-serif;
+    font-size: 11pt;
+    overflow: scroll;
 }
 
 .helpitem {
     padding: 0 0 1em 0;
+    font-size: 11pt;
 }
 
 ol {
@@ -205,7 +208,7 @@ ol {
 
 .credit {
     font-family: "Source Sans Pro", "Open Sans", "Arial", sans-serif;
-    font-size: 11pt;
+    font-size: 8pt;
 }
 
 p a {
@@ -220,4 +223,8 @@ p a:hover {
     z-index: 100;
     background: #00b7ff;
     color: white;
+}
+
+.helpbox-content {
+    padding: 3em;
 }
